--- a/templates/views/main.hbs
+++ b/templates/views/main.hbs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
     <script src="main.js"></script>
-    <title>Document</title>
+    <title>SibasisBadatya</title>
 </head>
 
 <body>
