--- a/templates/views/error.hbs
+++ b/templates/views/error.hbs
@@ -18,6 +18,10 @@
 
 <body>
     <h1>Invalid Credentials</h1>
+     <h1>Error may occured due to following reasons :</h1>
+    <h1>* Incorrect Password.</h1>
+     <h1>* Password and Repeatpassword may not be same.</h1>
+      <h1>*Entered Email may exist already.</h1>
 </body>
 
 </html>
